// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders when incorrect badgePermission is set 1`] = `
<StyledAvatar
  alt="User avatar"
  badge="someIncorrectBadgePermission"
  size={48}
>
  <StyledAvatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "eZFHuz",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 eZFHuz"
        size={48}
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-whpo0l-0",
                  "isStatic": true,
                  "lastClassName": "efwjGj",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-whpo0l-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-whpo0l-0 efwjGj"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="someIncorrectBadgePermission"
          className=""
          diameter={48}
          size={20.1872}
        >
          <StyledComponent
            badge="someIncorrectBadgePermission"
            className=""
            diameter={48}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-1a5ie29-0",
                  "isStatic": false,
                  "lastClassName": "cwhJAF",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-1a5ie29-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.1872}
          >
            <Badge
              badge="someIncorrectBadgePermission"
              className="Badge-sc-1a5ie29-0 cwhJAF"
              diameter={48}
              size={20.1872}
            />
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with badge 1`] = `
<StyledAvatar
  alt="User avatar"
  badge="sysop"
  size={48}
>
  <StyledAvatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "eZFHuz",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 eZFHuz"
        size={48}
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-whpo0l-0",
                  "isStatic": true,
                  "lastClassName": "efwjGj",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-whpo0l-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-whpo0l-0 efwjGj"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="sysop"
          className=""
          diameter={48}
          size={20.1872}
        >
          <StyledComponent
            badge="sysop"
            className=""
            diameter={48}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-1a5ie29-0",
                  "isStatic": false,
                  "lastClassName": "cwhJAF",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-1a5ie29-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.1872}
          >
            <Badge
              badge="sysop"
              className="Badge-sc-1a5ie29-0 cwhJAF"
              diameter={48}
              size={20.1872}
            >
              <span
                className="wds-avatar__badge Badge-sc-1a5ie29-0 cwhJAF"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with default props 1`] = `
<StyledAvatar
  alt="User avatar"
  size={48}
>
  <StyledAvatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "eZFHuz",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 eZFHuz"
        size={48}
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-whpo0l-0",
                  "isStatic": true,
                  "lastClassName": "efwjGj",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-whpo0l-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-whpo0l-0 efwjGj"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with link builder 1`] = `
<StyledAvatar
  alt="User avatar"
  linkBuilder={[Function]}
  size={48}
>
  <StyledAvatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "eZFHuz",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 eZFHuz"
        size={48}
      >
        <div>
          <DefaultAvatar
            alt="User avatar"
            borderWidth="3px"
            className=""
            title="User avatar"
          >
            <StyledComponent
              alt="User avatar"
              borderWidth="3px"
              className=""
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "DefaultAvatar-whpo0l-0",
                    "isStatic": true,
                    "lastClassName": "efwjGj",
                    "rules": Array [
                      "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                    ],
                  },
                  "defaultProps": Object {
                    "className": "",
                  },
                  "displayName": "DefaultAvatar",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "DefaultAvatar-whpo0l-0",
                  "target": [Function],
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                  Symbol(Symbol.hasInstance): [Function],
                }
              }
              forwardedRef={null}
              title="User avatar"
            >
              <Component
                alt="User avatar"
                borderWidth="3px"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <_default
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  >
                    <div
                      alt="User avatar"
                      className="DefaultAvatar-whpo0l-0 efwjGj"
                      title="User avatar"
                    />
                  </_default>
                </_default>
              </Component>
            </StyledComponent>
          </DefaultAvatar>
        </div>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with props 1`] = `
<StyledAvatar
  alt="alt"
  badge="sysop"
  className="class-name"
  href="href"
  size={48}
  src="src"
  title="title"
>
  <StyledAvatar__Wrapper
    href="href"
    size={48}
    title="title"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "cYlivE",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="href"
      size={48}
      title="title"
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 cYlivE"
        href="href"
        size={48}
        title="title"
      >
        <StyledAvatar__Link
          href="href"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "StyledAvatar__Link-sc-8ufved-0",
                  "isStatic": true,
                  "lastClassName": "kjnghW",
                  "rules": Array [
                    "color:#000;height:100%;width:100%;&:hover{color:#00acac;}",
                  ],
                },
                "displayName": "StyledAvatar__Link",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "StyledAvatar__Link-sc-8ufved-0",
                "target": "a",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            href="href"
          >
            <a
              className="StyledAvatar__Link-sc-8ufved-0 kjnghW"
              href="href"
            >
              <UserAvatar
                alt="alt"
                borderWidth="3px"
                className=""
                src="src"
                title="alt"
              >
                <StyledComponent
                  alt="alt"
                  borderWidth="3px"
                  className=""
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "UserAvatar-sc-1wud8kz-0",
                        "isStatic": false,
                        "lastClassName": "hafqGD",
                        "rules": Array [
                          "height:100%;width:100%;border-radius:50%;box-sizing:border-box;display:inline-block;border:",
                          [Function],
                          " solid #bed1cf;",
                        ],
                      },
                      "defaultProps": Object {
                        "className": "",
                      },
                      "displayName": "UserAvatar",
                      "foldedComponentIds": Array [],
                      "propTypes": Object {
                        "alt": [Function],
                        "borderWidth": [Function],
                        "className": [Function],
                        "title": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "UserAvatar-sc-1wud8kz-0",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  src="src"
                  title="alt"
                >
                  <Component
                    alt="alt"
                    borderWidth="3px"
                    className="UserAvatar-sc-1wud8kz-0 hafqGD"
                    src="src"
                    title="alt"
                  >
                    <img
                      alt="alt"
                      className="UserAvatar-sc-1wud8kz-0 hafqGD"
                      src="src"
                      title="alt"
                    />
                  </Component>
                </StyledComponent>
              </UserAvatar>
            </a>
          </StyledComponent>
        </StyledAvatar__Link>
        <Badge
          badge="sysop"
          className=""
          diameter={48}
          size={20.1872}
        >
          <StyledComponent
            badge="sysop"
            className=""
            diameter={48}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-1a5ie29-0",
                  "isStatic": false,
                  "lastClassName": "cwhJAF",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-1a5ie29-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.1872}
          >
            <Badge
              badge="sysop"
              className="Badge-sc-1a5ie29-0 cwhJAF"
              diameter={48}
              size={20.1872}
            >
              <span
                className="wds-avatar__badge Badge-sc-1a5ie29-0 cwhJAF"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with size >= 48px 1`] = `
<StyledAvatar
  alt="User avatar"
  badge="sysop"
  size="50"
>
  <StyledAvatar__Wrapper
    size="50"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "kywEtC",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="50"
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 kywEtC"
        size="50"
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-whpo0l-0",
                  "isStatic": true,
                  "lastClassName": "efwjGj",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-whpo0l-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-whpo0l-0 efwjGj"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="sysop"
          className=""
          diameter={50}
          size={20.695}
        >
          <StyledComponent
            badge="sysop"
            className=""
            diameter={50}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-1a5ie29-0",
                  "isStatic": false,
                  "lastClassName": "juzlSY",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-1a5ie29-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.695}
          >
            <Badge
              badge="sysop"
              className="Badge-sc-1a5ie29-0 juzlSY"
              diameter={50}
              size={20.695}
            >
              <span
                className="wds-avatar__badge Badge-sc-1a5ie29-0 juzlSY"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with size >= 120px 1`] = `
<StyledAvatar
  alt="User avatar"
  size="124"
>
  <StyledAvatar__Wrapper
    size="124"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "gtDpLB",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="124"
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 gtDpLB"
        size="124"
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="4px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="4px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-whpo0l-0",
                  "isStatic": true,
                  "lastClassName": "efwjGj",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-whpo0l-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="4px"
              className="DefaultAvatar-whpo0l-0 efwjGj"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;

exports[`Avatar renders with size 30px 1`] = `
<StyledAvatar
  alt="User avatar"
  badge="sysop"
  size="30"
>
  <StyledAvatar__Wrapper
    size="30"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StyledAvatar__Wrapper-sc-8ufved-1",
            "isStatic": false,
            "lastClassName": "miNBH",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".DefaultAvatar-whpo0l-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".StyledAvatar__Link-sc-8ufved-0",
              " ",
              ".UserAvatar-sc-1wud8kz-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "StyledAvatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StyledAvatar__Wrapper-sc-8ufved-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="30"
    >
      <div
        className="StyledAvatar__Wrapper-sc-8ufved-1 miNBH"
        size="30"
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="2px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="2px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-whpo0l-0",
                  "isStatic": true,
                  "lastClassName": "efwjGj",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#bed1cf;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-whpo0l-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="2px"
              className="DefaultAvatar-whpo0l-0 efwjGj"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-whpo0l-0 efwjGj"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-whpo0l-0 efwjGj"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-whpo0l-0 efwjGj"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="sysop"
          className=""
          diameter={30}
          size={15.617}
        >
          <StyledComponent
            badge="sysop"
            className=""
            diameter={30}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-1a5ie29-0",
                  "isStatic": false,
                  "lastClassName": "clhjIq",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-1a5ie29-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={15.617}
          >
            <Badge
              badge="sysop"
              className="Badge-sc-1a5ie29-0 clhjIq"
              diameter={30}
              size={15.617}
            >
              <span
                className="wds-avatar__badge Badge-sc-1a5ie29-0 clhjIq"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </StyledAvatar__Wrapper>
</StyledAvatar>
`;
